--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 <body>
     <div class="box">
         <div class="elements bg"></div>
+        <div class="elements imgBx">
+            <img src="img2.jpg" alt="user picture">
+        </div>
+        <div class="elements name">
+            <h2>Someone Famous</h2>
+        </div>
+        <div class="elements content">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae odio alias voluptatem! Vero sed molestias earum neque, eaque sequi exercitationem commodi nam veniam pariatur nesciunt accusantium ut, odio, amet aperiam?</p>
+        </div>
         <div class="card"></div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.0/vanilla-tilt.min.js" integrity="sha512-RX/OFugt/bkgwRQg4B22KYE79dQhwaPp2IZaA/YyU3GMo/qY7GrXkiG6Dvvwnds6/DefCfwPTgCXnaC6nAgVYw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
